--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ html{
   font-size: 13px;
 }
 Body{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: 'Barlow Semi Condensed', sans-serif;
   background-color: var(--light-grayish-blue);
 }
@@ -31,9 +35,8 @@ img{
 .container{
   width: 90%;
   max-width: 1100px;
-  margin: 2rem auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10rem, auto));
+  grid-template-columns: repeat(auto-fit, minmax(15.4rem, auto));
   grid-template-rows: minmax(15.4rem, auto) minmax(15.4rem, auto);
   grid-gap: 20px;
 }
@@ -57,10 +60,10 @@ img{
   align-self: center;
 }
 .person-name{
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: inherit;
   letter-spacing: 1px;
-  word-spacing: 2px;
+  word-spacing: 1px;
   margin-bottom: 0.4rem;
 }
 .v-graduate{
@@ -102,7 +105,7 @@ img{
   grid-column: 4;
   grid-row: 1/3;
   background-color: var(--white);
-  color: var(--very-dark-blackish-blue);
+  color: var(--very-dark-grayish-blue);
 }
 .blackish-blue{
   grid-column: 2/4;
